--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -25,10 +26,10 @@
               <a href="#home">Home</a>
             </li>
             <li>
-              <a href="">About</a>
+              <a href="#about">About</a>
             </li>
             <li>
-              <a href="">Location</a>
+              <a href="#location">Location</a>
             </li>
           </ul>
         </div>
@@ -50,7 +51,7 @@
         <button class="contact-us" type="submit">contact us</button>
       </div>
     </div>
-    <div class="section-two">
+    <div class="section-two" id="about">
       <div class="sec2-img">
         <img src="images/alexandru-stavrica.jpg" alt="img2" />
       </div>
@@ -72,7 +73,7 @@
         </div>
       </div>
     </div>
-    <div class="section-three">
+    <div class="section-three" id="location">
       <div class="sec3-content">
         <h2 class="sec3-title">Our Location</h2>
         <p class="sec3-p1">We have been operating for over 30 years and are Members of The Federation of Master Builders. We work on projects big and small from small residential extensions to full house. We are so happy with this theme. Everyday it make our lives better.</p>
@@ -83,4 +84,5 @@
       </div>
     </div>
   </body>
+
 </html>
